# rust-pdf

./: .gitignore  Cargo.toml  README.md
ops/: dev.Dockerfile  docker-compose.yml
src/: document.rs  lib.rs  main.rs  objects.rs  reference_table.rs  structures.rs
src/document/: document.rs  header.rs  reference_table.rs  trailer.rs
src/objects/: array.rs  boolean.rs  dictionary.rs  document.rs  header.rs  indirect_object.rs  name.rs  number.rs  reference.rs  stream.rs  string.rs  trailer.rs
src/structures/: page.rs  rectangle.rs
