[package]
name="rust-pdf"
version="0.0.0"
authors=["Valette <mehdi.valette@gmail.com>"]

edition = "2021"

[dependencies]
encoding = "0.2"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
